--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.2.3",
     "@actions/exec": "^1.0.3",
-    "@actions/io": "^1.0.2"
+    "@actions/io": "^1.0.2",
+    "@types/node": "^13.9.1"
   }
 }
