--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: checkout-code
         uses: actions/checkout@master
 
-      - name: build-releas
+      - name: build-release
         run: |
           tsc
           npm install --production
