--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -18,7 +18,7 @@ jobs:
         run: |
           tsc
           npm install --production
-          zip -r ${{ github.ref }}.zip .
+          zip -r release.zip .
 
       - name: create-release
         id: create_release
@@ -40,7 +40,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ github.ref }}.zip
-          asset_name: ${{ github.ref }}.zip
+          asset_path: ./release.zip
+          asset_name: release.zip
           asset_content_type: application/zip
 
