--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: '12.x'
 
+      - run: npm i -D @zeit/ncc
       - run: npm install
+        
       
       - name: Build Action
         run: |
