--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -1,5 +1,4 @@
-on:
-  [push]
+on: [push]
 
 name: build-release
 
@@ -8,37 +7,32 @@ jobs:
     name: build-release
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout Code
         uses: actions/checkout@master
 
-      - name: Use Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: "12.x"
 
       - run: sudo npm i -g @zeit/ncc
-      - run: npm install
-        
-      
-      - name: Build Action
+
+      - run: npm install --production
+
+      - name: Compile files
         run: |
-          npm i -D @zeit/ncc
-          npm install --production
           tsc
           ncc build src/main.js
-          
+
       - name: Commit Files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -m "Add changes" -a
+
+          git add dist/main.js
+          git commit -m "Add changes"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-    
-          
-
