--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -29,7 +29,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
 
-          git add dist/index.js
+          git add dist/index.js -f
           git commit -m "Add changes"
 
       - name: Push changes
