--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -1,4 +1,11 @@
-on: [push]
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - 'src/*'
+      - 'package.json'
+      - 'package-lock.json'
 
 name: build-release
 
