--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,20 @@
 name: "Azure Resource Manager (ARM) Template Deployment JS"
 description: "Use this GitHub Action task deploy an Azure Resource Manager (ARM) template"
 inputs:
+  scope:
+    description: "Provide the scope of the deployment. alid values are: 'resourcegroup', 'managementgroup', 'subscription'"
+    required: true
   resourceGroupName:
     description: "Provide the name of a resource group."
+    required: false
+  subscriptionId:
+    description: "Provide the Id of the subscription which should be used"
     required: true
+  location:
+    description: "Provide the target location, only required for management Group or Subscription deployments."
+    required: false
   templateLocation:
-    description: "Specify the path to the Azure Resource Manager template."
+    description: "Specify the path or URL to the Azure Resource Manager template."
     required: true
   deploymentMode:
     description: "Incremental (only add resources to resource group) or Complete (remove extra resources from resource group)."
