--- a/action.yml
+++ b/action.yml
@@ -4,14 +4,14 @@ inputs:
   scope:
     description: "Provide the scope of the deployment. alid values are: 'resourcegroup', 'managementgroup', 'subscription'"
     required: true
-  resourceGroupName:
-    description: "Provide the name of a resource group."
-    required: false
   subscriptionId:
-    description: "Provide the Id of the subscription which should be used"
+    description: "Provide the Id of the subscription which should be used."
     required: true
   location:
-    description: "Provide the target location, only required for management Group or Subscription deployments."
+    description: "Provide the target region, only required for management Group or Subscription deployments."
+    required: false
+  resourceGroupName:
+    description: "Provide the name of a resource group."
     required: false
   templateLocation:
     description: "Specify the path or URL to the Azure Resource Manager template."
