--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - name: Check out source code
         uses: actions/checkout@v1
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -27,7 +25,8 @@ jobs:
           INPUT_LOCATION: westeurope
           INPUT_RESOURCEGROUPNAME: azurearmaction
           INPUT_TEMPLATELOCATION: ./test/template.json
-          INPUT_PARAMETERSLOCATION: ./test/parameters.json
+          INPUT_PARAMETERS: ./test/parameters.json
+          INPUT_OVERRIDEPARAMETERS: ./test/paramters.override.json
           INPUT_DEPLOYMENTNAME: github-test
           INPUT_DEPLOYMENTMODE: Incremental
         run: ts-node test/main.tests.ts
